{
    "name": "PlayerInputSystem",
    "maps": [
        {
            "name": "Player",
            "id": "d822b04e-97ab-4720-9072-562bfb843600",
            "actions": [
                {
                    "name": "Driving",
                    "type": "Value",
                    "id": "d297aba4-8280-4066-b8de-19d1ad2220bc",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HandBrake",
                    "type": "Button",
                    "id": "a4ae5073-3229-47e3-a4dc-8471daf0c089",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Looking",
                    "type": "Value",
                    "id": "093d0d6a-9660-4c1e-8396-abd9fcbc57a3",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Stearing",
                    "type": "Value",
                    "id": "80d61b0a-c995-4085-8e38-a6a084cdf4d5",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ShiftUp",
                    "type": "Button",
                    "id": "4b4d28a9-ad5a-47a5-aa9e-8c8166e86703",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShiftDown",
                    "type": "Button",
                    "id": "95d866d7-8103-4510-bc34-1211cbf24457",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9b657ff0-4ed2-4f58-aa06-dc7689a590de",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandBrake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b80f13bb-6f08-453c-913d-5d233e3c62a5",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Looking",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "a227be58-dff1-429b-877f-5989450d1f3f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Driving",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "50f37935-1a33-42c2-988a-d8fef6bc781f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Driving",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "927ae67c-6dee-4a5c-b822-5932bc0bb120",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Driving",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "308e431d-7e38-4aa1-8ff4-136ce619ed45",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stearing",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5624f875-f12a-418d-b577-6d9d1b2f773f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stearing",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e59a1df6-46f5-4768-8acd-742f7a0e403b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stearing",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a6cd4bc7-98f4-4ff0-82e2-b4dcf97e5b80",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShiftUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bde1274c-02a0-4523-b145-a78219e82fc4",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShiftDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}